--- a/html/login.html
+++ b/html/login.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - Ver anime online</title>
-    <link rel="stylesheet" href="/css/login.css">
-    <link rel="icon" href="/assets/imagenesPrincipales/icon.png">
-    <script src="/js/login.js"></script>
+    <link rel="stylesheet" href="../css/login.css">
+    <link rel="icon" href="../assets/imagenesPrincipales/icon.png">
+    <script src="../js/login.js"></script>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <form class="form">
         <section class="form__register">
             <h2 class="form__title">Registrate Ahora</h2>
-            <p class="form__paragraph">¿Has creado una cuenta previamente? <a href="/index.html" class="form__link">Click aqui</a>
+            <p class="form__paragraph">¿Has creado una cuenta previamente? <a href="../index.html" class="form__link">Click aqui</a>
             </p>
 
             <div class="form__inputs">
@@ -44,7 +44,7 @@
     <div class="video"></div>
 
     <video class="video__reproductor" autoplay loop muted
-        src="/assets/videos/y2mate.com - This Is It  AMV  Mix  Anime Mix_480p.mp4">
+        src="../assets/videos/y2mate.com - This Is It  AMV  Mix  Anime Mix_480p.mp4">
     </video>
 
 
