--- a/html/video.html
+++ b/html/video.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video - Ver anime online</title>
-    <link rel="stylesheet" href="/css/video.css">
+    <link rel="stylesheet" href="../css/video.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="icon" href="/assets/imagenesPrincipales/icon.png">
+    <link rel="icon" href="../assets/imagenesPrincipales/icon.png">
 </head>
 
 <body>
@@ -19,12 +19,12 @@
             <ul class="cabezado__lista">
 
                 <li class="cabezado__lista__item-logo">
-                    <a href="/index.html" class="cabezado__lista__hipervinculo">
-                        <img src="/assets/imagenesPrincipales/logo.webp" alt="animeFlv" class="cabezado__lista__logo">
+                    <a href="../index.html" class="cabezado__lista__hipervinculo">
+                        <img src="../assets/imagenesPrincipales/logo.webp" alt="animeFlv" class="cabezado__lista__logo">
                     </a>
                 </li>
 
-                <li class="cabezado__lista__item"><a class="cabezado__lista__item" href="/index.html">INICIO</a></li>
+                <li class="cabezado__lista__item"><a class="cabezado__lista__item" href="../index.html">INICIO</a></li>
 
                 <li class="cabezado__lista__item">DIRECTORIO ANIME</li>
 
@@ -79,7 +79,7 @@
             </div>
 
             <video class="video__muestra"
-                src="/assets/videos/Komisan wa Comyushou desu Season 2 Ending  Koshaberi Biyori  FantasticYouth_v720P.mp4"
+                src="../assets/videos/Komisan wa Comyushou desu Season 2 Ending  Koshaberi Biyori  FantasticYouth_v720P.mp4"
                 controls>
             </video>
 
@@ -89,7 +89,7 @@
             <h2 class="noticias__anime">Noticias de anime</h2>
             <div class="noticia__main">
                 <div class="noticia__contenedor">
-                    <img class="noticia__imagen" src="/assets/imagenesAnimes/10.jpg">
+                    <img class="noticia__imagen" src="../assets/imagenesAnimes/10.jpg">
                     <span class="noticia__segmento">2022.05.21</span>
                 </div>
                 <div class="noticia__parrafo">
@@ -101,7 +101,7 @@
 
             <div class="noticia__main">
                 <div class="noticia__contenedor">
-                    <img class="noticia__imagen" src="/assets/imagenesAnimes/14.14.jpg">
+                    <img class="noticia__imagen" src="../assets/imagenesAnimes/14.14.jpg">
                     <span class="noticia__segmento">2022.05.21</span>
                 </div>
                 <div class="noticia__parrafo">
@@ -113,7 +113,7 @@
 
             <div class="noticia__main">
                 <div class="noticia__contenedor">
-                    <img class="noticia__imagen" src="/assets/imagenesAnimes/11.webp">
+                    <img class="noticia__imagen" src="../assets/imagenesAnimes/11.webp">
                     <span class="noticia__segmento">2022.05.21</span>
                 </div>
                 <div class="noticia__parrafo">
@@ -125,7 +125,7 @@
 
             <div class="noticia__main">
                 <div class="noticia__contenedor">
-                    <img class="noticia__imagen" src="/assets/imagenesAnimes/2.webp">
+                    <img class="noticia__imagen" src="../assets/imagenesAnimes/2.webp">
                     <span class="noticia__segmento">2022.05.21</span>
                 </div>
                 <div class="noticia__parrafo">
